Added option to create a club admin user
